<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

        <ScrollView
            android:id="@+id/apis_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/google_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_login" />

                <Button
                    android:id="@+id/facebook_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_login" />

                <Button
                    android:id="@+id/apple_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apple_login" />

<!--                <Button-->
<!--                    android:id="@+id/apple_login_v2_btn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/apple_login_v2" />-->

                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />

<!--                <Button-->
<!--                    android:id="@+id/initBilling_btn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="결제초기화" />-->

<!--                <Button-->
<!--                    android:id="@+id/inapp_purchase_btn_1"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/inapp_purchase_1" />-->

<!--                <Button-->
<!--                    android:id="@+id/inapp_purchase_btn_2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/inapp_purchase_2" />-->

<!--                <Button-->
<!--                    android:id="@+id/inapp_purchase_btn_3"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/inapp_purchase_3" />-->

                <Button
                    android:id="@+id/custom_tab_view_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_tab_view" />

                <Button
                    android:id="@+id/popup_dialog_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_dialog" />

                <Button
                    android:id="@+id/img_banner_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/image_banner" />



            </LinearLayout>

        </ScrollView>
        <Button
            android:id="@+id/clear_log_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="clear" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9">

            <TextView
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true" />
        </ScrollView>
    </LinearLayout>
</ScrollView>